# Qt

./: CMakeLists.txt  README.md
Project/: CMakeLists.txt  main.cpp
Project/Core/: CMakeLists.txt
Project/Core/ApplicationController/: ApplicationController.cpp  ApplicationController.h  CMakeLists.txt
Project/Core/ModuleManager/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.h
Project/Examples/: CMakeLists.txt  VariadicTemplate.cpp  VariadicTemplate.h
Project/UI/: CMakeLists.txt
Project/UI/ApplicationView/: ApplicationView.cpp  ApplicationView.h  CMakeLists.txt
Project/UI/WidgetManager/: CMakeLists.txt  WidgetManager.cpp  WidgetManager.h
